<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipChildren="false"
    android:clipToPadding="false">

    <!-- 小电视水印 -->
    <ImageView
        android:id="@+id/tv_watermark"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="-40dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/bilibili_tv"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@null" />

    <!-- Page 1: 询问是否绑定按键 (D-pad 可操作) -->
    <LinearLayout
        android:id="@+id/page_ask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ask_title_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/setup_page_padding">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keybinding_ask_title"
                android:textSize="@dimen/setup_title_text_size"
                android:textColor="#D86DA5" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/btn_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/setup_message_padding"
                android:paddingRight="@dimen/setup_message_padding"
                android:text="@string/keybinding_ask_message"
                android:textSize="@dimen/setup_content_text_size"
                android:textColor="#666666" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/setup_page_padding"
            android:layout_marginBottom="@dimen/setup_page_padding">

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keybinding_yes"
                android:textSize="@dimen/setup_button_text_size"
                android:textColor="#FFFFFF"
                android:background="@drawable/setup_ask_yes_bg"
                android:padding="@dimen/setup_button_padding"
                android:layout_marginRight="@dimen/setup_page_padding"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keybinding_no"
                android:textSize="@dimen/setup_button_text_size"
                android:textColor="#D86DA5"
                android:background="@drawable/setup_ask_no_bg"
                android:padding="@dimen/setup_button_padding"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>

    <!-- Page 2: 录制页（任何按键输入都会被录制，只能触摸操作） -->
    <LinearLayout
        android:id="@+id/page_record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/record_title_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/setup_page_padding">

            <TextView
                android:id="@+id/record_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keybinding_title"
                android:textSize="@dimen/setup_title_text_size"
                android:textColor="#D86DA5" />

            <TextView
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keybinding_exit"
                android:textSize="@dimen/setup_button_text_size"
                android:textColor="#D86DA5"
                android:background="#FFFFFF"
                android:padding="@dimen/setup_button_padding"
                android:clickable="true"
                android:focusable="false" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/keybinding_prompt_prefix"
                android:textSize="@dimen/setup_prompt_text_size"
                android:textColor="#333333" />

        </FrameLayout>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/setup_message_padding"
            android:paddingRight="@dimen/setup_message_padding"
            android:textSize="@dimen/setup_progress_text_size"
            android:textColor="#666666" />

        <TextView
            android:id="@+id/record_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/setup_message_padding"
            android:paddingRight="@dimen/setup_message_padding"
            android:text="@string/keybinding_recording_hint"
            android:textSize="@dimen/setup_hint_text_size"
            android:textColor="#999999"
            android:paddingBottom="@dimen/setup_button_padding" />

        <TextView
            android:id="@+id/exit_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/setup_message_padding"
            android:paddingRight="@dimen/setup_message_padding"
            android:text="@string/keybinding_exit_hint"
            android:textSize="@dimen/setup_hint_text_size"
            android:textColor="#999999"
            android:layout_marginBottom="@dimen/setup_page_padding" />

    </LinearLayout>

</FrameLayout>
